# SiteManager/app/Http/Controllers/ClockIns/ClockInsController.php
@@ -57,7 +57,7 @@ class ClockInsController extends Controller
         'projectId' => 'required|numeric',
         'startDate' => 'date',
         'endDate' => 'date',
-        'searchTerm' => 'string',
+        
     ]);
 
  
@@ -79,16 +79,7 @@ class ClockInsController extends Controller
         $clockIn->payRate = $worker->payRate;
     }
 
-    //search for worker if search term is not null
-    if ($request->searchTerm != null || $request->searchTerm != "") {
-        $clockIns = $clockIns->filter(function($clockIn) use ($request) {
-            $worker = Worker::where('workerId', $clockIn->workerId)->first();
-            if (stripos($worker->name, $request->searchTerm) !== false || stripos($worker->phoneNumber, $request->searchTerm) !== false) {
-                return true;
-            }
-            return false;
-        });
-    }
+   
 
     if ($clockIns->isEmpty()) {
         return response([
